feat: added security schemas and bearer auth middleware for all routes
